# ll-annotation

./: AnnotationScheme.dtd  Annotator.cabal  SimpleScheme.dtd
src/: AnnotationDTD.hs  Main.hs  SimpleDTD.hs  TODO  Test.hs  Tokenizer.hs
src/Annotator/: DTD.hs  Interface.hs  Tokenizer.hs
src/Annotator/Interface/: Constants.hs  Handlers.hs  Models.hs  Types.hs  Util.hs
src/gui/: AnnotatorGUI.glade
src/tools/: Agreement.hs  TextToCorpus.hs
text/: paper.tex  taxonomy.dot
