Name: Annotator
Version: 0.0.1
Synopsis: An annotation tool for learner language corpora.
License: BSD3
Author: Aleksandar Dimitrov
Maintainer: Aleksandar Dimitrov <aleks.dimitrov@gmail.com>
Build-Depends: base
Cabal-Version: >=0.12
build-type: Simple

library
    exposed-modules:
        Annotator.DTD,
        Annotator.Tokenizer
    hs-source-dirs: src
    ghc-options: -Wall -O2
    build-depends: base, HaXml >= 1.19

executable annotator
    hs-source-dirs: src
    main-is: Main.hs
    other-modules: Annotator.Interface, Annotator.DTD
    ghc-options: -Wall -O2 -fglasgow-exts
    ghc-prof-options: -prof -auto-all
    extensions: ScopedTypeVariables BangPatterns
    build-depends: base, gtk >= 0.10, HaXml >= 1.19, glade >= 0.10, mtl, containers, array

executable text2corpus
    hs-source-dirs: src/tools, src
    main-is: TextToCorpus.hs
    other-modules: Annotator.DTD, Annotator.Tokenizer
    ghc-options: -Wall -O2
    ghc-prof-options: -prof -auto-all
    build-depends: base, HaXml >= 1.19, bytestring, pretty
